force-app/main/default/objects/Professional_Continuing_Education__c/Professional_Continuing_Education__c.object-meta.xml
<CustomObject>
    <label>Professional Continuing Education</label>
    <nameField>
        <label>Professional Continuing Education Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional Continuing Education</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>