force-app/main/default/objects/Professional_Continuing_Education__c/fields/Cancellation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Approver__c</fullName>
    <inlineHelpText>This field details which FSMTB user marked this PCE as canceled.</inlineHelpText>
    <label>Cancellation Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>