force-app/main/default/objects/Professional_Continuing_Education__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <description>Completion date for CE credit</description>
    <inlineHelpText>This field shows the date the therapist completed the CE credit.</inlineHelpText>
    <label>Completed On</label>
    <type>Date</type>
</CustomField>