force-app/main/default/objects/Professional_Continuing_Education__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Therapist to which the CE record relates.</description>
    <inlineHelpText>Therapist to which the CE record relates.</inlineHelpText>
    <label>Therapist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Professional Continuing Education</relationshipLabel>
    <relationshipName>ProfessionalEducation</relationshipName>
    <type>Lookup</type>
</CustomField>