force-app/main/default/objects/Professional_Continuing_Education__c/fields/Course_Category__c.field-meta.xml
<CustomField>
    <fullName>Course_Category__c</fullName>
    <description>The category of the course for this Professional Continuing Education record.</description>
    <formula>TEXT(Session__r.Course__r.Category__c) + IF(TEXT(Session__r.Course__r.Sub_Category__c) != null, &apos; - &apos; + TEXT(Session__r.Course__r.Sub_Category__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the category of the course for this record.</inlineHelpText>
    <label>Course Category</label>
    <type>Text</type>
</CustomField>