force-app/main/default/objects/Professional_Continuing_Education__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <description>The ID of the course for this Professional Continuing Education record.</description>
    <formula>Session__r.Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the ID of the course for this record.</inlineHelpText>
    <label>Course ID</label>
    <type>Text</type>
</CustomField>