force-app/main/default/objects/Professional_Continuing_Education__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>The name of the course for this Professional Continuing Education record.</description>
    <formula>Session__r.Course__r.Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the name of the course for this record.</inlineHelpText>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>