force-app/main/default/objects/Professional_Continuing_Education__c/fields/Course_Provider__c.field-meta.xml
<CustomField>
    <fullName>Course_Provider__c</fullName>
    <description>The name of the course provider for this Professional Continuing Education record.</description>
    <formula>Session__r.Course__r.Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the name of the course provider for this record.</inlineHelpText>
    <label>Course Provider</label>
    <type>Text</type>
</CustomField>