force-app/main/default/objects/Professional_Continuing_Education__c/fields/Course_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Status__c</fullName>
    <formula>Session__r.Course__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Status</label>
    <type>Text</type>
</CustomField>