force-app/main/default/objects/Professional_Continuing_Education__c/fields/Current_Active_Action_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Action_Start_Date__c</fullName>
    <label>Current Active Action Start Date</label>
    <type>Date</type>
</CustomField>