force-app/main/default/objects/Professional_Continuing_Education__c/fields/Current_Active_Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Action_Status__c</fullName>
    <label>Current Active Action Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>