force-app/main/default/objects/Professional_Continuing_Education__c/fields/Lecture_On_Site_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lecture_On_Site_Hours__c</fullName>
    <description>Percent of on-site hours that are lecture for this Professional Continuing Education record.</description>
    <formula>Session__r.On_Site_Percentage_Lecture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the percentage of hours that are lecture for this session for this record.</inlineHelpText>
    <label>Lecture %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>