force-app/main/default/objects/Professional_Continuing_Education__c/fields/Revoked_From__c.field-meta.xml
<CustomField>
    <fullName>Revoked_From__c</fullName>
    <formula>IF(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, &quot;Account&quot;, &quot;&quot;) +
IF(AND(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, Course&quot;, &quot;&quot;) +
IF(AND(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, Session&quot;, &quot;&quot;) +
IF(AND(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, PCE&quot;, &quot;&quot;) +
IF(AND(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, NOT(Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, PCE&quot;, &quot;&quot;) +
IF(AND(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, NOT(Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, Session&quot;, &quot;&quot;) +
IF(AND(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, NOT(Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, PCE&quot;, &quot;&quot;) +
IF(AND(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, NOT(Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), NOT(Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, PCE&quot;, &quot;&quot;) +
IF(AND(NOT(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;Course&quot;, &quot;&quot;) +
IF(AND(NOT(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, Session&quot;, &quot;&quot;) + 
IF(AND(NOT(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, PCE&quot;, &quot;&quot;) +
IF(AND(NOT(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, NOT(Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, PCE&quot;, &quot;&quot;) +
IF(AND(NOT(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), NOT(Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;Session&quot;, &quot;&quot;) + 
IF(AND(NOT(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), NOT(Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;, Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;, PCE&quot;, &quot;&quot;) +
IF(AND(NOT(Session__r.Course__r.Account__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), NOT(Session__r.Course__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), NOT(Session__r.Current_Active_Action_Status__c == &apos;Revoked&apos;), Current_Active_Action_Status__c == &apos;Revoked&apos;), &quot;PCE&quot;, &quot;&quot;)</formula>
    <label>Revoked From</label>
    <type>Text</type>
</CustomField>