force-app/main/default/objects/Professional_Continuing_Education__c/fields/Roster_Upload_Email__c.field-meta.xml
<CustomField>
    <fullName>Roster_Upload_Email__c</fullName>
    <label>Roster Upload Email</label>
    <type>Email</type>
</CustomField>