force-app/main/default/objects/Professional_Continuing_Education__c/fields/Roster_Upload_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Roster_Upload_First_Name__c</fullName>
    <label>Roster Upload First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>