force-app/main/default/objects/Professional_Continuing_Education__c/fields/Roster_Upload_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Roster_Upload_Last_Name__c</fullName>
    <label>Roster Upload Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>