force-app/main/default/objects/Professional_Continuing_Education__c/fields/Roster_Upload_License_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Roster_Upload_License_Number_1__c</fullName>
    <label>Roster Upload License Number 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>