force-app/main/default/objects/Professional_Continuing_Education__c/fields/Roster_Upload_State_1__c.field-meta.xml
<CustomField>
    <fullName>Roster_Upload_State_1__c</fullName>
    <label>Roster Upload State 1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>