force-app/main/default/objects/Professional_Continuing_Education__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Professional Continuing Education</relationshipLabel>
    <relationshipName>Professional_Continuing_Education</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>