force-app/main/default/objects/Professional_Continuing_Education__c/fields/Session_Status__c.field-meta.xml
<CustomField>
    <fullName>Session_Status__c</fullName>
    <formula>Session__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Status</label>
    <type>Text</type>
</CustomField>