force-app/main/default/objects/Professional_Continuing_Education__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <formula>Session__r.Session_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Type</label>
    <type>Text</type>
</CustomField>