force-app/main/default/objects/Professional_Continuing_Education__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Current_Active_Action_Status__c != null, Current_Active_Action_Status__c, &apos;Active&apos;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>