force-app/main/default/objects/Professional_Continuing_Education__c/fields/Total_CE_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_CE_Hours__c</fullName>
    <description>The total number of hours earned for this Professional Continuing Education record.</description>
    <formula>Session__r.Hours_Earned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the total number of hours earned for this record.</inlineHelpText>
    <label>Total CE Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>