force-app/main/default/objects/Professional_Continuing_Education__c/fields/Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Upload_Status__c</fullName>
    <inlineHelpText>Details whether this record has successfully been matched, needs to be reviewed for a match, or is on hold waiting for a state to participate to match.</inlineHelpText>
    <label>Upload Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <default>true</default>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>