force-app/main/default/objects/Professional_Continuing_Education__c/fields/Upload_Status_Canceled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Upload_Status_Canceled_Reason__c</fullName>
    <inlineHelpText>Details why a PCE reviewer decided this was not a valid PCE.</inlineHelpText>
    <label>Upload Status Canceled Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>