force-app/main/default/objects/Professional_Continuing_Education__c/validationRules/Approved_Requires_Therapist.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Requires_Therapist</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Upload_Status__c, &quot;Approved&quot;),
    ISBLANK(Contact__c)
)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>You must update what Therapist this is related to if you are Approving the record.</errorMessage>
</ValidationRule>