force-app/main/default/objects/Professional_Continuing_Education__c/validationRules/Can_upload_Status_should_be_Canceled.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_upload_Status_should_be_Canceled</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Upload_Status__c, &quot;Canceled&quot;),
    ISBLANK(Cancellation_Approver__c)
)</errorConditionFormula>
    <errorMessage>Upload Status should be Canceled</errorMessage>
</ValidationRule>