force-app/main/default/objects/Professional_Continuing_Education__c/validationRules/Canceled_Requires_Approver_And_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Canceled_Requires_Approver_And_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Upload_Status__c, &quot;Canceled&quot;),
    OR(
        ISBLANK(Cancellation_Approver__c),
        ISBLANK(Upload_Status_Canceled_Reason__c)
    )
)</errorConditionFormula>
    <errorMessage>Please provide the name of the person who chose to Cancel this record, as well as the reasoning for the cancellation.</errorMessage>
</ValidationRule>