force-app/main/default/objects/Professional_Continuing_Education__c/validationRules/Require_Contact_When_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Contact_When_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Upload_Status__c, &quot;Approved&quot;),
    ISBLANK(Contact__c)
)</errorConditionFormula>
    <errorMessage>A Contact must be associated when Upload Status is Approved.</errorMessage>
</ValidationRule>