force-app/main/default/objects/Professional_Continuing_Education__c/validationRules/Therapist_Is_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Therapist_Is_Null</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Contact__c )),
    NOT(ISPICKVAL(Upload_Status__c, &quot;Approved&quot;))
)</errorConditionFormula>
    <errorDisplayField>Upload_Status__c</errorDisplayField>
    <errorMessage>Therapist is requiered</errorMessage>
</ValidationRule>