force-app/main/default/objects/Professional_Continuing_Education__c/validationRules/Therapist_Requires_Approved_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Therapist_Requires_Approved_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Contact__c)),
    NOT(ISPICKVAL(Upload_Status__c, &quot;Approved&quot;)),
    NOT(ISPICKVAL(Upload_Status__c, &quot;Canceled&quot;))
)</errorConditionFormula>
    <errorDisplayField>Upload_Status__c</errorDisplayField>
    <errorMessage>You must have an Upload Status of Approved if a Therapist is related to this record.</errorMessage>
</ValidationRule>