force-app/main/default/objects/Professional_Continuing_Education__c/validationRules/Uplaod_Status_is_req.validationRule-meta.xml
<ValidationRule>
    <fullName>Uplaod_Status_is_req</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    TEXT(Upload_Status__c) = &quot;Canceled&quot;,
    ISBLANK( Upload_Status_Canceled_Reason__c )
)</errorConditionFormula>
    <errorMessage>Upload Status is Canceled</errorMessage>
</ValidationRule>