force-app/main/default/objects/Professional_Continuing_Education__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Course_Provider__c</columns>
    <columns>Revoked_From__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>